🧪 test(github, commit-log): 테스트 데이터 세팅 방식 개선 및 도메인 기반 insert로 통일
- 기존 JDBC 직접 insert 방식 제거
- UserAccount → GithubRepo → CommitLog 순으로 도메인 생성 기반 세팅
- 중복된 FK, unique 제약 충돌 문제 해결
- 가독성과 유지보수성 높은 테스트 구조로 재작성
- findByRepoId, multiInsert, 필드 검증 테스트 추가